<resources>
    <string name="app_name">Strong and healthy</string>
    <string name="why_water_norm">Водный баланс такой же важный аспект здорового образа жизни как и норма калорий. Недостаток или переизбыток воды в организме может вызывать многие болезни.\nСтарайтесь каждый день соблюдать водный баланс и вы будете чувствовать себя намного энергичнее</string>
    <string name="why_kal_norm">Калории — единица измерения энергии, поступающей в организм во время еды. Подсчет энергетической ценности ежедневного рациона позволит поддерживать правильное процентное соотношение белков, жиров и углеводов, контролировать норму получения необходимых питательных веществ в соответствии с индивидуальными параметрами: возрастом, полом, весом, ростом, образом жизни. Результатом станет стройное подтянутое тело и отличное самочувствие.</string>
    <string name="why_history">После каждого дня в этот календарь добавляются данные о съеденных вами калориях, а именно, выполнили ли вы норму или нет. Чтобы день отмечался зелёным, нужно чтобы в этот день вы съели калорий в пределе 10% от нормы(+/-10%).</string>
    <string name="choose_product">Выберите продукт или блюдо из списка</string>
    <string name="Calorii">Калории</string>
    <string name="Belki">Белки</string>
    <string name="Jiri">Жиры</string>
    <string name="Uglevodi">Углеводы</string>
    <string name="Enter_massa">Введите размер порции в граммах</string>
    <string name="Massa_g">Размер порции, г</string>
    <string name="Select_food_or_scan_barcode">Выберите продукт из списка или отсканируйте штрихкод:</string>
    <string name="barcode_scanner">- сканер штрих кода</string>
    <string name="search">Поиск</string>
    <string name="Calendar_activity">Календарь активности</string>
    <string name="good_days">Успешные дни</string>
    <string name="avtorization">Авторизация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="no_account_log_in">Нет аккаунта.\nЗарегистрироваться</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="weight_kg">Вес, кг</string>
    <string name="enter_your_weight">Введите ваш вес</string>
    <string name="height_cm">Рост, см</string>
    <string name="age_years">Возраст, лет</string>
    <string name="enter_your_age">Введите ваш возраст</string>
    <string name="enter_your_height">Введите ваш рост</string>
    <string name="gender">Пол</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="next">Далее</string>
    <string name="svodka">Сводка</string>
    <string name="food">Питание</string>
    <string name="training">Тренировки</string>
    <string name="kalorii_main">Калории</string>
    <string name="jiri_main">Жиры</string>
    <string name="balki_main">Белки</string>
    <string name="uglevodi_main">Углеводы</string>
    <string name="water_goal">Цель: 2,00 литра</string>
    <string name="water_look">Отслеживание выпитой воды</string>
    <string name="how_often">Как часто вы занимаетесь физической активностью?</string>
    <string name="fiz1">Физ. нагрузка отсутствует или минимальна</string>
    <string name="fiz2">Умеренная активность 3 раза в неделю</string>
    <string name="fiz3">Тренировки средней интенсивности 5 раз в неделю</string>
    <string name="fiz4">Интенсивные тренировки 5 раз в неделю</string>
    <string name="fiz5">Ежедневные тренировки</string>
    <string name="fiz6">Интенсивные тренировки каждый день</string>
    <string name="fiz7">Интенсивные тренировки 2 раза в день или тяжелая физическая работа</string>
    <string name="enter_name">Введите название</string>
    <string name="name">Название</string>
    <string name="uglevodi">Углеводы</string>
    <string name="jiri">Жиры</string>
    <string name="belki">Белки</string>
    <string name="kalorii">Калории</string>
    <string name="enter1">Ввести</string>
    <string name="save_barcode">Сохранить штрихкод</string>
    <string name="choose_training">Выберите тренировку:</string>
    <string name="press">Тренировка на пресс</string>
    <string name="arms">Тренировка на руки</string>
    <string name="back">Тренировка на спину</string>
    <string name="legs">Тренировка на ноги</string>
    <string name="all">Тренировка на все тело</string>
    <string name="register">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="log_in">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт.\nВойти</string>
    <string name="task_number">Упражнение №: </string>
    <string name="from">\ из\u00A0</string>
    <string name="s">\ c</string>
    <string name="congrats_good_training">Поздравляем! Хорошая тренировка!</string>
    <string name="g">\ г</string>
    <string name="kkal">\ ккал</string>
    <string name="enter_massa">Введите массу продукта</string>
    <string name="kkal_na_sto_g">\ ккал на 100г</string>
    <string name="calendar_activnosti">Календарь активности</string>
    <string name="enter_complete">Выполнен вход в аккаунт</string>
    <string name="not_successful">Не удалось авторизоваться</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="enter_email_correct">Пожалуйта введите элетронную почту корректно</string>
    <string name="enter_password">Введите пароль</string>
    <string name="more_on">Свыше нормы на  </string>
    <string name="goal">Цель: </string>
    <string name="zechem_sledit">Зачем нужно следить за колличеством выпитой воды?</string>
    <string name="zachem_sobludat">Зачем нужно соблюдать норму калорий?</string>
    <string name="enter_all_data">Введите все данные</string>
    <string name="successful_register">Успешная регистрация!</string>
    <string name="ne_udalos">Ну удалось зарегистрироваться!!</string>
    <string name="please_try_again"> Пожалуйста попробуйте ещё раз</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="enter_username">Введите имя пользователя</string>
    <string name="too_short_password">Пароль слишком короткий</string>
    <string name="press1">Упражнение для пресса</string>
    <string name="press2">Подъем корпуса</string>
    <string name="press3">Боковой мостик (влево)</string>
    <string name="press4">Боковой мостик (вправо)</string>
    <string name="press5">Упражнение для пресса</string>
    <string name="press6">Велосипед</string>
    <string name="press7">Планка с правого бока</string>
    <string name="press8">Планка с левого бока</string>
    <string name="press9">Уголок</string>
    <string name="press10">Отжимания с поворотом</string>
    <string name="press11">Качели</string>
    <string name="press12">Ягодичный мостик</string>
    <string name="press13">Боковые наклоны к стопам</string>
    <string name="press14">Альпинист</string>
    <string name="press15">Скручивание с поворотом</string>
    <string name="press16">Уголок</string>
    <string name="press17">Планка</string>
    <string name="press18">Растяжка кобра</string>
    <string name="press19">Скручивания влево</string>
    <string name="press20">Скручивания вправо</string>
    <string name="ruki1">Махи руками по\nчасовой стрелке</string>
    <string name="ruki2">Махи руками против\nчасовой стрелки</string>
    <string name="ruki3">Подъем ноги бицесом\nлевой руки</string>
    <string name="ruki4">Прыжки без скакалки</string>
    <string name="ruki5">Подъем ноги бицесом\nправой руки</string>
    <string name="ruki6">Скручивания лежа\nдля левой руки</string>
    <string name="ruki7">Берпи</string>
    <string name="ruki8">Скручивания лежа\nдля правой руки</string>
    <string name="ruki9">Отжимание сидя на полу</string>
    <string name="ruki10">Боковые удары по очереди</string>
    <string name="ruki11">Военные отжимания</string>
    <string name="ruki12">Сведение локтей</string>
    <string name="ruki13">Боковые удары по очереди</string>
    <string name="ruki14">Отжимание сидя на полу</string>
    <string name="ruki15">Берпи</string>
    <string name="ruki16">Скручивание лежа\nдля левой руки</string>
    <string name="ruki17">Скручивания лежа\nдля правой руки</string>
    <string name="ruki18">Военные отжимания</string>
    <string name="ruki19">Сведение локтей</string>
    <string name="ruki20">Скручивания в проеме\nдля левой руки</string>
    <string name="ruki21">Скручивания в проеме\nдля правой руки</string>
    <string name="ruki22">Движения вверх-вниз\nсведенными локтями</string>
    <string name="ruki23">Растяжка левого трицепса</string>
    <string name="ruki24">Растяжка правого трицепса</string>
    <string name="ruki25">Отжимания с поворотом</string>
    <string name="ruki26">Растяжка левого бицепса</string>
    <string name="ruki27">Растяжка правого бицепса</string>
    <string name="spina1">Прыжки</string>
    <string name="spina2">Отжимание назад</string>
    <string name="spina3">Гиперэкстензии</string>
    <string name="spina4">V-отжимания на полу</string>
    <string name="spina5">Гусеница</string>
    <string name="spina6">Растяжка на полу влево</string>
    <string name="spina7">Растяжка на полу вправо</string>
    <string name="spina8">Гиперэкстензии</string>
    <string name="spina9">V-отжимания на полу</string>
    <string name="spina10">Отжимание назад</string>
    <string name="spina11">Гусеница</string>
    <string name="spina12">Поза кошки - поза коровы</string>
    <string name="spina13">Отжимания на спине</string>
    <string name="spina14">Y-подъемы</string>
    <string name="spina15">Отжимания на спине</string>
    <string name="spina16">Обратный снежный ангел</string>
    <string name="spina17">Поза ребенка</string>
    <string name="nogi1">Берпи</string>
    <string name="nogi2">Приседания</string>
    <string name="nogi3">Прыжки</string>
    <string name="nogi4">Подъем ноги, левая</string>
    <string name="nogi5">Подъем ноги, правая</string>
    <string name="nogi6">Приседания выпады</string>
    <string name="nogi7">Круги лежа на боку, левая</string>
    <string name="nogi8">Приседания выпады</string>
    <string name="nogi9">Круги лежа на полу, правая</string>
    <string name="nogi10">Прыжки на корточках</string>
    <string name="nogi11">Отведение ног назад, правая</string>
    <string name="nogi12">Отведение ног назад, левая</string>
    <string name="nogi13">Приседание у стены</string>
    <string name="nogi14">Растяжка четырёхглавой мышцы, левая</string>
    <string name="nogi15">Растяжка четырёхглавой мышцы, правая</string>
    <string name="nogi16">Подъём на носок, левая</string>
    <string name="nogi17">Подъем на носок, правая</string>
    <string name="vse1">Прыжки</string>
    <string name="vse2">Военные отжимания</string>
    <string name="vse3">Планка</string>
    <string name="vse4">V-отжимания на полу</string>
    <string name="vse5">Гусеница</string>
    <string name="vse6">Растяжка на полу влево</string>
    <string name="vse7">Растяжка на полу вправо</string>
    <string name="vse8">Гиперэкстензии</string>
    <string name="vse9">Приседания</string>
    <string name="vse10">Уголок</string>
    <string name="vse11">Прыжки на корточках</string>
    <string name="vse12">Поза кошки - поза коровы</string>
    <string name="vse13">Растяжка четырёхглавой мышцы, левая</string>
    <string name="vse14">Растяжка четырёхглавой мышцы, правая</string>
    <string name="vse15">Растяжка левого бицепса</string>
    <string name="vse16">Растяжка правого бицепса</string>
    <string name="vse17">Прыжки</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="change_body">Изменить параметры тела</string>
    <string name="calendar">Календарь активности</string>
    <string name="fiz_act">Изменить уровень физ. активности</string>
    <string name="change_language2">Сменить язык</string>
    <string name="add">Добавить</string>
</resources>