<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainPage">
    <item android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout">
    </item>
    <item android:id="@+id/change_parametrs"
        android:icon="@drawable/person"
        android:title="@string/change_body">
    </item>
    <item android:id="@+id/calendar"
        android:icon="@drawable/calendar"
        android:title="@string/calendar">
    </item>
    <item android:id="@+id/change_level"
        android:icon="@drawable/fiz_act"
        android:title="@string/fiz_act">
    </item>
    <item
        android:id="@+id/language"
        android:title="@string/change_language2"
        android:icon="@drawable/language">
    </item>

</menu>