<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPhysicalActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/how_often"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/level1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/fiz1" />

        <RadioButton
            android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz2" />

        <RadioButton
            android:id="@+id/level3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz3" />

        <RadioButton
            android:id="@+id/level4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz4" />

        <RadioButton
            android:id="@+id/level5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz5" />

        <RadioButton
            android:id="@+id/level6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz6" />

        <RadioButton
            android:id="@+id/level7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fiz7" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="247dp"
        android:layout_height="75dp"

        android:background="@xml/buttons"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>