<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scanned_food">

    <EditText
        android:id="@+id/name_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_barcode"
        android:layout_width="247dp"
        android:layout_height="75dp"

        android:layout_marginTop="80dp"
        android:background="@xml/buttons"
        android:text="@string/save_barcode"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/kal_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter1"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/u_barcode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/u_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter1"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/b_barcode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kal_barcode"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/g_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter1"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b_barcode"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/b_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter1"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/g_barcode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/u_barcode"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/kalorii"
        app:layout_constraintEnd_toEndOf="@+id/kal_barcode"
        app:layout_constraintStart_toStartOf="@+id/kal_barcode"
        app:layout_constraintTop_toBottomOf="@+id/kal_barcode" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/belki"
        app:layout_constraintEnd_toEndOf="@+id/g_barcode"
        app:layout_constraintStart_toStartOf="@+id/g_barcode"
        app:layout_constraintTop_toBottomOf="@+id/g_barcode" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/jiri"
        app:layout_constraintEnd_toEndOf="@+id/b_barcode"
        app:layout_constraintStart_toStartOf="@+id/b_barcode"
        app:layout_constraintTop_toBottomOf="@+id/b_barcode" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/uglevodi"
        app:layout_constraintEnd_toEndOf="@+id/u_barcode"
        app:layout_constraintStart_toStartOf="@+id/u_barcode"
        app:layout_constraintTop_toBottomOf="@+id/u_barcode" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/name_barcode"
        app:layout_constraintStart_toStartOf="@+id/name_barcode"
        app:layout_constraintTop_toBottomOf="@+id/name_barcode" />

</androidx.constraintlayout.widget.ConstraintLayout>